src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>MIA_Resolution_Reason__c</fullName>
        <label>MIA Resolution Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Reboot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscape Script</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turned Player Back On (site power)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other *This should have a Solution Details option if selected*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WO Scheduled and Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance - Site manually turned off system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical TV Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site IT Issues(network, firewall, connectivity, other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV has been unplugged or a cord is loose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV has froze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During reboot TV stops on purple Ubuntu screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After reboot the screen says &quot;Player is unregistered&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After reboot the TV goes to the screen that requires a keyboard (press F1 to continue)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet - Reboot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet - Purposely Turned Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet - Unplugged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet - Turned Back On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet - Sent to MSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet  - Unrelated WO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet - Clinic IT Helped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet - No Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet - Left VM and back online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet - Deinstall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MPTypeofInternet__c</fullName>
        <label>Brand of Internet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTIConfirmedDateTime__c</fullName>
        <label>MTI Confirmed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MTITechnicianName__c</fullName>
        <label>MTI Technician Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTITechnicianPhone__c</fullName>
        <label>MTI Technician Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MediaplayerMountOption__c</fullName>
        <label>Mediaplayer Mount Option</label>
        <picklist>
            <picklistValues>
                <fullName>Wall Mounted with Brackets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Velcro Attached to TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other(Please Explain in Notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Address__c</fullName>
        <formula>Account.BillingStreet &amp;BR()&amp; Account.BillingCity &amp; &apos; &apos; &amp; Account.BillingState &amp;&apos; &apos;&amp; Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Practice Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Practice_BroadBand_System__c</fullName>
        <formula>Account.BroadBandSystem__c</formula>
        <label>Member Practice BroadBand System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Practice_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Practice City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Practice_DHCP__c</fullName>
        <formula>Account.DHCP__c</formula>
        <label>Member Practice DHCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Practice_MIA_Tendencies__c</fullName>
        <formula>Account.MIA_Tendencies__c</formula>
        <label>Member Practice MIA Tendencies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <label>Member Practice Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Practice_State__c</fullName>
        <formula>TEXT(Account.BillingStateCode)</formula>
        <label>Member Practice State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Static__c</fullName>
        <formula>Account.Static__c</formula>
        <label>Member Practice Static</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Practice_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <label>Member Practice Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Practice_of_Screen__c</fullName>
        <formula>Account.of_Screens__c</formula>
        <label>Member Practice # of Screen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_practice_Stage__c</fullName>
        <formula>text(Account.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member practice - Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MtiPoNumber__c</fullName>
        <label>MTI PO Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetOps_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetOps Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Netmask__c</fullName>
        <label>Netmask</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkDropInstOption__c</fullName>
        <label>Network Drop Inst Option</label>
        <picklist>
            <picklistValues>
                <fullName>Panduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT5 Faceplate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Deployment_New__c</fullName>
        <label>Network Deployment</label>
        <picklist>
            <picklistValues>
                <fullName>WiFi - Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi - CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cicat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Health_Specialist__c</fullName>
        <formula>Account.Network_Health_Specialist__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network Health Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Action_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This person is responsible for the next action!!!</inlineHelpText>
        <label>Next Action Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_NH_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No NH %</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfServiceDates__c</fullName>
        <description>this counts service dates that are not canceled  and used for reporting by NDS</description>
        <label>Number of Service Dates</label>
        <summaryFilterItems>
            <field>Service_Date__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled - Do Not Pay</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Date__c.Related_Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofNewServiceDates__c</fullName>
        <description>This formula calculates service dates in the New, Release to Vendor, and Received statuses. It is used for validation to prevent creating new service dates when old service dates have not been closed</description>
        <label>Number of New Service Dates</label>
        <summaryFilterItems>
            <field>Service_Date__c.Status__c</field>
            <operation>equals</operation>
            <value>New, Release To Vendor, Received</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Date__c.Related_Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofTVRemovedRelocated__c</fullName>
        <description>Number of TVs being removed/relocated</description>
        <label>Number of TVs being Removed/Relocated</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OFFSET_DST_c__c</fullName>
        <formula>Account.OFFSET_DST_c__c</formula>
        <label>OFFSET_DST__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OFFSET_ST__c</fullName>
        <formula>Account.DMA_Zip_Code__r.OFFSET_ST__c</formula>
        <label>OFFSET ST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_C_Last_Update__c</fullName>
        <formula>Account.OCLastUpdate__c</formula>
        <label>O.C. Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office_Hours__c</fullName>
        <formula>Account.Clinic_Office_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Okay_to_mount_Daveed__c</fullName>
        <label>Okay to mount TV?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Onboarding_Specialist__c</fullName>
        <formula>Account.onboarding_specialist__r.FirstName + &quot; &quot; +  Account.onboarding_specialist__r.LastName</formula>
        <label>Onboarding Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnlineStatusinBroadLand__c</fullName>
        <label>Online Status in Broad/Land?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OtherTVinWR__c</fullName>
        <label>Other TV in WR?</label>
        <picklist>
            <picklistValues>
                <fullName>Accent Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy Advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OutletCoverinstalled__c</fullName>
        <label>Outlet Cover installed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously Installed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Who_Verified_WO_24_48_Hour__c</fullName>
        <label>Office Staff Who Verified WO 24/48 Hour</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Who_Will_Be_On_Site_for_Questions__c</fullName>
        <label>Office Staff Who Will Be On Site for ?&apos;s</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Who_Will_Know_Internet_WiFi_Info__c</fullName>
        <label>Office Staff  Who Will Know Int/WiFi</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picsaddedtobook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pics added to book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picssentlate__c</fullName>
        <label>Pics sent late</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PicturesReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pictures Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picturestakenbytech__c</fullName>
        <label>Pictures taken by tech?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PilotShipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pilot-Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlayerModel__c</fullName>
        <label>Player Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlayerOS__c</fullName>
        <label>Player OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player_Active_and_Online_in_MDM_and_BS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Player Active and Online in MDM and BS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Player_Connection_Type__c</fullName>
        <label>Player Connection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardlined to Almond AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardlined to Almond RE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Include information in notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon (Hardlined) – TP Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon (WiFi) – TP Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon USB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi – Airtight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi – Almond AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi – Cicat + Almond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi – Clinic Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi – Clinic Provided – Almond RE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PlayersTablets_Labeled_Properl__c</fullName>
        <label>Players/Tablets Labeled Properly</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, I did my job and labeled players and tablets properly, I also moved the player to the correct folder in Broadsign if required.  There is nothing I need to do for players or tablets.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, I decided not to do my job.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Players_Being_Installed__c</fullName>
        <label># Players Being Installed</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ports_10799_10805_21_80_443_access__c</fullName>
        <label>Ports 10799, 10805, 21, 80, 443 access?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dont Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <formula>Account.Primary_Contact__r.FirstName &amp; &apos; &apos; &amp; Account.Primary_Contact__r.LastName</formula>
        <label>Primary Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_DNS__c</fullName>
        <label>Primary DNS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductNotes__c</fullName>
        <label>Product Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>BAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV &amp; PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV &amp; PC &amp; Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallboard 32 Touch Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallboard 40 Touch Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WR WiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WR WiFi - Sprint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuickBase_ID__c</fullName>
        <label>QuickBase ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_FedEx_Pickup__c</fullName>
        <label>Ready for FedEx Pickup?</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_MIA_Status__c</fullName>
        <label>Reason for MIA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Technical - Site Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical - Site Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical - CM Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance - Patient Caused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance - Staff Caused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonforDeinstallation__c</fullName>
        <label>Reason for Deinstallation</label>
        <picklist>
            <picklistValues>
                <fullName>Dr went MIA and clinic closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifying Doctor Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifying Doctor Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifying Doctor Passed Away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Issue - Boring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Issue - Not Relevent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Issue - Foreign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Issue - Repetitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reason Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Sponsors Allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation - Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation - New Regulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation - Cable or Other System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation - Competitor System Installed There</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went to Competitor - PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went to Competitor - AH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went to Competitor - Other than PP or AH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went to Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait Time Very Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rennovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Disaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joined Medical Group/System/Hospital Please list new Network</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonforReturnTrip__c</fullName>
        <label>Reason for Return Trip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Player_Type__c</fullName>
        <label>Recommended Player Type</label>
        <picklist>
            <picklistValues>
                <fullName>LAN Connected (standard player)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi Player</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint/Verizon Player</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequestedInstallDates__c</fullName>
        <label>Requested Install Dates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResolutionDetails__c</fullName>
        <label>Resolution Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>APK Pushed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deinstalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM Script</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Troubleshooting needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plugged back in and turned on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ports Unblocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reboot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet setting change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turned on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV/Cords plugged back in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WO - Player Swap Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WO - Swap Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WO - TS resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_Visit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Visit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Routers_Being_Installed__c</fullName>
        <label>Routers Being Installed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScopeofWorkNotes__c</fullName>
        <label>Scope of Work Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScreenSize__c</fullName>
        <label>Screen Size</label>
        <picklist>
            <picklistValues>
                <fullName>42</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>49</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>